--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- nav -->
-<div class="pos-f-t" *ngIf="currentUser">
+<!-- <div class="pos-f-t" *ngIf="currentUser">
   <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
         <div class="d-flex justify-content-between">
@@ -14,6 +14,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </nav>
-</div>
-
+</div> -->
+<html>
 <router-outlet></router-outlet>
+</html>
