--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,8 +25,8 @@
 
                                         <select [(ngModel)]="log.stop" (click)="resetErrors()"
                                             [disabled]="dropdownDisabled" name="stop" class="form-control" >
-                                            <option>Select a Stop</option>
-                                            <option *ngFor="let stop of stopDropdown" [ngValue]="stop[0]">{{stop[1]}}</option>
+                                            <option selected>Select a Stop</option>
+                                            <option *ngFor="let stop of stopDropdown" [ngValue]="stop">{{stop.name}}</option>
                                         </select>
                                     </div>
                                 </div>
