--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,10 @@
 .center-block {
-    display: table;  /* Instead of display:block */
+    display: table;
+    /* Instead of display:block */
     margin-left: auto;
     margin-right: auto;
 }
 
-
 .btn-block {
     font-size: 40px;
 }
-
