Add inspection service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -112,7 +112,7 @@
                                             <br />
                                         </div>
                                     </div>
-                                    <button class="btn btn-lg btn-settings btn-block" [disabled]="this.logService.getSyncingStatus() == true" routerLink="/configure">Change Settings</button>
+                                    <button class="btn btn-lg btn-settings btn-block" [disabled]="this.logService.getSyncingStatus() == true" routerLink="/post-inspection">Sign off & Do Post-Inspection</button>
 
                                 </div>
 
