--- a/src/app/post-inspection/post-inspection.component.html
+++ b/src/app/post-inspection/post-inspection.component.html
@@ -1,5 +1,5 @@
 <br />
-<p>{{testItem}}</p>
+
 <form>
    
   <div class="row">
@@ -8,7 +8,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <table align="center">
-          <div class="form-group" *ngFor="let x of postItem">
+          <div class="form-group" *ngFor="let x of postItems">
             <h5>
           <tr>
             <td>
