--- a/src/app/pre-inspection/pre-inspection.component.html
+++ b/src/app/pre-inspection/pre-inspection.component.html
@@ -10,16 +10,16 @@
     
         <div *ngFor="let item of preItems">
             <div class="inputGroup">
-                <input id={{item.name}} name="option1" type="checkbox" />
+                <input id={{item.name}} name="option1" type="checkbox" [(ngModel)]="item.state"/>
                 <label for={{item.name}}>{{item.name}}</label>
             </div>
         </div>
     
-
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <br />
+        
         <div class="form__group">
-            <input type="text" class="form__input" id="name" placeholder="Starting Mileage" required="" />
-            <label for="name" class="form__label">Starting Mileage</label>
+            <input type="text"  id="name"  required="true" #mileage>
+            <label for="name" placeholder="Starting Mileage" ></label>
         </div>
 
     </form>
@@ -32,7 +32,7 @@
         </div>
         <div class="col-sm-8">
             <div class="form-group">
-                <div><button class="btn btn-xl btn-block" (click)="validateStartButton()">Start</button></div>
+                <div><button class="btn btn-xl btn-block" (click)="validateStartButton()" [disabled]="buttonState()">Start</button></div>
                 <div class="alert alert-danger text-center" [@simpleFadeAnimation]="'in'" *ngIf="errorMessageState">
                     <h4>
                         {{errorMessage}}
