--- a/src/app/pre-inspection/pre-inspection.component.html
+++ b/src/app/pre-inspection/pre-inspection.component.html
@@ -1,6 +1,6 @@
 <br />
 
-<form>
+<form #form="ngForm">
     
    <div class="text-center">
      <h1>Pre-Trip Inspection</h1>
@@ -18,7 +18,7 @@
         <br />
         
         <div class="form__group">
-            <input type="text"  id="name"  required="true" #mileage>
+            <input type="text"  id="name"  required="true" [(ngModel)]="startMileage">
             <label for="name" placeholder="Starting Mileage" ></label>
         </div>
 
