submitting inspection to DB

--- a/src/app/post-inspection/post-inspection.component.html
+++ b/src/app/post-inspection/post-inspection.component.html
@@ -19,9 +19,26 @@
        <br />
        
        <div class="form__group">
-           <input type="text"  id="name"  required="true" #mileage>
+           <input type="text"  id="name"  required="true" (keyup)="onKey($event)">
            <label for="name" placeholder="Ending Mileage" ></label>
        </div>
+
+       <div class="row">
+        <div class="col-sm-2">
+        </div>
+        <div class="col-sm-8">
+            <div class="form-group">
+                <div><button class="btn btn-xl btn-block" (click)="submitLog()" [disabled]="buttonState()">Finish</button></div>
+                <div class="alert alert-danger text-center" [@simpleFadeAnimation]="'in'" *ngIf="errorMessageState">
+                    <h4>
+                        {{errorMessage}}
+                    </h4>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-2">
+        </div>
+    </div>
 
    </form>
  
@@ -34,15 +51,8 @@
 
     <div class="card">
 
-        <div class="card-header">
-            App Information
-        </div>
-
+    
         
-
-        <button class="btn btn-lg btn-xl-logout btn-block" [disabled]="buttonState()" data-toggle="collapse" href="/login" (click)="logout()">Logout</button>
-        <button id='syncButton' (click)="startSync()" class="btn btn-xl-card btn-block" [disabled]="this.logService.isSyncing" *ngIf="syncingMessage == 'Syncing, please do not close this page.' || syncingMessage == 'There was an error. Please ensure you have a stable WiFi connection and try again.'">Sync
-       {{getSyncMessage()}}</button>
     </div>
 
 </footer>
