--- a/src/app/post-inspection/post-inspection.component.html
+++ b/src/app/post-inspection/post-inspection.component.html
@@ -29,7 +29,7 @@
         <div class="col-sm-8">
             <div class="form-group">
                 <div><button class="btn btn-xl btn-block" (click)="submitLog()" [disabled]="buttonState()">Finish</button></div>
-                <div class="alert alert-danger text-center" [@simpleFadeAnimation]="'in'" *ngIf="status==='OFFLINE'">
+                <div class="alert alert-danger text-center" [@simpleFadeAnimation]="'in'" *ngIf="!onlineOffline">
                     <h4>
                         {{errMessage}}
                     </h4>
