--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -124,7 +124,7 @@
                         <div class="overlay" [@simpleFadeAnimation]="'in'" *ngIf="successMessageState">
                             <div class="successMessage">
                                 <div></div>
-                                <a style="color: black" class="btn-xl-close" (click)="closeSuccessMessage()">X</a>
+                                <a style="color: white" class="btn-xl-close" (click)="closeSuccessMessage()">X</a>
                                 <div></div>
                                 <div></div>
                                 <div></div>
