--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -50,7 +50,8 @@
 }
 
 .btn-xl-close {
-  padding: 10px 10px;
+  padding: 10px 25px;
+  float: right;
   object-position: right;
   font-size: 60px;
   border-radius: 15px;
